h2 overflow fixed

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ html{
 }
 
 .value_card h2{
+    white-space: nowrap;
     margin-top: 30px;
     font-size: 1.8rem;
     font-family: 'Poppins', sans-serif;
